Made sms template to be dockit and frontened title as dockit

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     
     <!-- Primary Meta Tags -->
-    <title>ChargEase - Nepal's Premier EV Charging Network</title>
-    <meta name="title" content="ChargEase - Nepal's Premier EV Charging Network" />
+    <title>Dockit - Nepal's Premier EV Charging Network</title>
+    <meta name="title" content="Dockit - Nepal's Premier EV Charging Network" />
     <meta name="description" content="Find and book electric vehicle charging stations across Nepal. Real-time availability, secure payments, and fast charging solutions for all EV types." />
     <meta name="keywords" content="EV charging Nepal, electric vehicle charging stations, book EV charging, Nepal EV network, electric car charging, fast charging Nepal" />
     <meta name="robots" content="index, follow" />
@@ -15,17 +15,17 @@
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://chargease.com.np/" />
-    <meta property="og:title" content="ChargEase - Nepal's Premier EV Charging Network" />
+    <meta property="og:url" content="https://dockit.dallytech.com/" />
+    <meta property="og:title" content="Dockit - Nepal's Premier EV Charging Network" />
     <meta property="og:description" content="Find and book electric vehicle charging stations across Nepal with real-time availability and secure payments." />
-    <meta property="og:image" content="https://chargease.com.np/og-image.jpg" />
+    <meta property="og:image" content="https://dockit.dallytech.com/og-image.jpg" />
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://chargease.com.np/" />
-    <meta property="twitter:title" content="ChargEase - Nepal's Premier EV Charging Network" />
+    <meta property="twitter:url" content="https://dockit.dallytech.com/" />
+    <meta property="twitter:title" content="Dockit - Nepal's Premier EV Charging Network" />
     <meta property="twitter:description" content="Find and book electric vehicle charging stations across Nepal with real-time availability and secure payments." />
-    <meta property="twitter:image" content="https://chargease.com.np/twitter-image.jpg" />
+    <meta property="twitter:image" content="https://dockit.dallytech.com/twitter-image.jpg" />
 
     <!-- Favicon -->
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
